# atlas-brain

./: .gitignore  README.md  pyproject.toml
.claude/: CLAUDE.md
atlas_brain/: __init__.py  cli.py  config.py  db.py  models.py  validation.py
atlas_brain/health/: __init__.py  checker.py  gaps.py  patterns.py  staleness.py
atlas_brain/ingest/: __init__.py  archiver.py  chunker.py  classifier.py  embedder.py  fact_extractor.py  indexer.py  logger.py  pipeline.py
atlas_brain/ingest/extractors/: __init__.py  code.py  conversation.py  docx.py  markdown.py  media.py  pdf.py  pptx.py  recall.py  web.py
atlas_brain/knowledge/: __init__.py  contradictions.py  entities.py  facts.py  trust.py
atlas_brain/search/: __init__.py  faceted.py  filters.py  lexical.py  planner.py  semantic.py  unified.py
atlas_brain/server/: __init__.py  mcp_server.py  rest_api.py
atlas_brain/session/: __init__.py  brief.py  save.py
atlas_brain/utils/: __init__.py  dates.py  hashing.py  ids.py
docs/: CONFIGURATION.md
tests/: test_smoke.py
