[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlas-brain"
version = "0.1.0"
description = "Local-first cognitive operating system for knowledge management"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "sqlite-utils>=3.36",
    "chromadb>=0.5",
    "sentence-transformers>=3.0",
    "pdfplumber>=0.11",
    "markitdown>=0.1",
    "python-docx>=1.1",
    "python-pptx>=1.0",
    "mcp>=1.0",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "einops>=0.8",
]

[project.scripts]
atlas = "atlas_brain.cli:app"

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
include = ["atlas_brain*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["*Tests"]
python_functions = ["test_*"]
